# sot_sandbox

./: .gitignore  CMakeLists.txt  manifest.xml  package.xml
launch/: controller.launch  d1.launch  d1a.launch  d2.launch  d3.launch  displayer.launch  full_hrp4.launch  full_pr2.launch  full_robot.launch  full_romeo.launch  joywalk.launch  robohow_pr2.launch
launch/robots/: hrp4.xml  pr2.xml  romeo.xml
python/: hrp4_robohow_startup.py  pr2_robohow_startup.py  pr2_test.py
script/: joy2pg.py  start_dynamic_graph.py
src/: declare_topic.py  start_controller.cpp  start_controller.h
